tdf#158023 Add \ before parentheses if they are in the <t> tag.

MSO allows you to write unpair opening or closing parentheses in the t tag.
The patch adds a backslash before parentheses, which allows you to correctly
recognize and correctly save such formulas when exporting.

Also add a test to check whether the parentheses are wrapped correctly.

Change-Id: Ib1a941858f0843742b56b8089f3c14983ba1222c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158794
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 8148dd6ed3c61eaf5f9fe3a060ecda9d11611f39)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169103
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>